fixed nullrepository exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=password
 # Needed for Case Sensitive Tables and Columns
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.servlet.context-path=/Fan4
+
+# Ignore Mac OS Double files 
+spring.classformat.ignore=true
